# outlier_detection_mahalanobis

./: .gitignore  README.md  main.py  outlier_detection.py  pyproject.toml
